# clash-parser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
clash_parser/: __main__.py  config.py  parsing.py  web.py
tests/: test_parsing.py
