[tool.poetry]
name = "clash-parser"
version = "0.6.1"
description = "an implementation of the Parser feature from CFW, but with HTTP API"
authors = ["xyqyear <xyqyear@gmail.com>"]
readme = "README.md"
packages = [{include = "clash_parser"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruamel-yaml = "^0.18.6"
aiofiles = "^24.1.0"
aiohttp = "^3.11.10"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
coverage = "^7.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
